@@ -60,8 +60,6 @@
 
 #if QT_VERSION >= 0x040400
 #include <QtGui/qprinterinfo.h>
-#include <QtWebKit/qwebframe.h>
-#include <QtWebKit/qwebhistory.h>
 #include <QtNetwork/qnetworkcookie.h>
 #endif
 
@@ -284,7 +282,7 @@ Q_DECL_EXPORT void AddWizardButtonToQList(void* ptr, int i)
 }
 #endif
 
-};
+}
 
 // extern bool isDerivedFromByName(Smoke *smoke, const char *className, const char *baseClassName);
 extern void mapPointer(void * obj, smokeqyoto_object *o, Smoke::Index classId, void *lastptr);
@@ -1598,10 +1596,6 @@ DEF_LIST_MARSHALLER( QUndoStackList, QList<QUndoStack*>, QUndoStack )
 DEF_LIST_MARSHALLER( QMdiSubWindowList, QList<QMdiSubWindow*>, QMdiSubWindow )
 #endif
 
-#if QT_VERSION >= 0x40400
-DEF_LIST_MARSHALLER( QWebFrameList, QList<QWebFrame*>, QWebFrame )
-#endif
-
 template <class Item, class ItemList, const char *ItemSTR >
 void marshall_ValueListItem(Marshall *m) {
 	switch(m->action()) {
@@ -1778,7 +1772,6 @@ DEF_VALUELIST_MARSHALLER( QXmlStreamNotationDeclarations, QVector<QXmlStreamNota
 #if QT_VERSION >= 0x40400
 DEF_VALUELIST_MARSHALLER( QNetworkCookieList, QList<QNetworkCookie>, QNetworkCookie )
 DEF_VALUELIST_MARSHALLER( QPrinterInfoList, QList<QPrinterInfo>, QPrinterInfo )
-DEF_VALUELIST_MARSHALLER( QWebHistoryItemList, QList<QWebHistoryItem>, QWebHistoryItem )
 #endif
 
 Q_DECL_EXPORT TypeHandler Qt_handlers[] = {
@@ -1910,8 +1903,6 @@ Q_DECL_EXPORT TypeHandler Qt_handlers[] = {
     { "QList<QNetworkCookie>", marshall_QNetworkCookieList },
     { "QList<QNetworkCookie>&", marshall_QNetworkCookieList },
     { "QList<QPrinterInfo>", marshall_QPrinterInfoList },
-    { "QList<QWebFrame*>", marshall_QWebFrameList },
-    { "QList<QWebHistoryItem>", marshall_QWebHistoryItemList },
 #endif
     { 0, 0 }
 };
